fix icons and alignment

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -7,7 +7,7 @@
     flex-shrink: 0;
     align-items: flex-end;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 200px;
     position: relative;
 }
 
